--- a/src/assets/css/Projects.css
+++ b/src/assets/css/Projects.css
@@ -66,6 +66,10 @@ h2 {
 
 /* Desktop styles */
 @media screen and (min-width: 1024px) {
+    .container-project {
+        padding: 80px 60px;
+    }
+
     h2 {
         margin-left: 80px;
         font-size: 45px;
@@ -73,5 +77,12 @@ h2 {
 
     .all-projects {
         width: 180px;
+    }
+}
+
+/* Large desktop styles */
+@media screen and (min-width: 1440px) {
+    .container-project {
+        padding: 100px 80px;
     }
 }
